@startuml

title __OBJECTS's Class Diagram__\n

  namespace edu.up.isgc.raytracer {
    namespace objects {
      class edu.up.isgc.raytracer.objects.Camera {
          - defaultZ : float
          - fieldOfView : float[]
          - nearFarPlanes : float[]
          - resolution : int[]
          + Camera()
          + calculatePositionsToRay()
          + getDefaultZ()
          + getFieldOfView()
          + getFieldOfViewHorizontal()
          + getFieldOfViewVertical()
          + getIntersection()
          + getNearFarPlanes()
          + getResolution()
          + getResolutionHeight()
          + getResolutionWidth()
          + setDefaultZ()
          + setFieldOfView()
          + setFieldOfViewHorizontal()
          + setFieldOfViewVertical()
          + setNearFarPlanes()
          + setResolution()
      }
    }
  }
  

  namespace edu.up.isgc.raytracer {
    namespace objects {
      abstract class edu.up.isgc.raytracer.objects.Object3D {
          - color : Color
          + Object3D()
          + getColor()
          + getMaterial()
          + getPosition()
          + setColor()
          + setMaterial()
          + setPosition()
      }
    }
  }
  

  namespace edu.up.isgc.raytracer {
    namespace objects {
      class edu.up.isgc.raytracer.objects.Polygon {
          + triangles : List<Triangle>
          + Polygon()
          + getIntersection()
          + getTriangles()
          + setTriangles()
      }
    }
  }
  

  namespace edu.up.isgc.raytracer {
    namespace objects {
      class edu.up.isgc.raytracer.objects.Sphere {
          - radius : float
          - shininess : float
          + Sphere()
          + getIntersection()
          + getRadius()
          + setRadius()
      }
    }
  }
  

  namespace edu.up.isgc.raytracer {
    namespace objects {
      class edu.up.isgc.raytracer.objects.Triangle {
          {static} + EPSILON : double
          - normals : Vector3D[]
          - vertices : Vector3D[]
          + Triangle()
          + Triangle()
          + Triangle()
          + getIntersection()
          + getNormal()
          + getNormals()
          + getVertices()
          + setNormals()
          + setNormals()
          + setVertices()
          - setVertices()
      }
    }
  }
  

  edu.up.isgc.raytracer.objects.Camera -up-|> edu.up.isgc.raytracer.objects.Object3D
  edu.up.isgc.raytracer.objects.Object3D .up.|> edu.up.isgc.raytracer.IIntersectable
  edu.up.isgc.raytracer.objects.Object3D o-- edu.up.isgc.raytracer.tools.Material : material
  edu.up.isgc.raytracer.objects.Object3D o-- edu.up.isgc.raytracer.Vector3D : position
  edu.up.isgc.raytracer.objects.Polygon -up-|> edu.up.isgc.raytracer.objects.Object3D
  edu.up.isgc.raytracer.objects.Sphere -up-|> edu.up.isgc.raytracer.objects.Object3D
  edu.up.isgc.raytracer.objects.Triangle .up.|> edu.up.isgc.raytracer.IIntersectable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
